--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,28 +25,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # [✅ 추가된 부분] pnpm을 먼저 설치해야 합니다!
+      # pnpm 설치
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9 # package.json을 보니 최신 버전을 쓰시는 것 같아 9로 설정했습니다.
+          version: 9
 
+      # Node.js 설정
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "pnpm" # pnpm 캐싱 활성화
+          cache: "pnpm"
 
+      # 의존성 설치
       - name: Install dependencies
-        # pnpm install --frozen-lockfile은 pnpm-lock.yaml이 있을 때만 작동합니다.
-        # 만약 lock 파일이 없다면 그냥 pnpm install만 쓰세요.
         run: pnpm install
 
+      # 빌드 실행
       - name: Build
         run: pnpm run build
         env:
           NODE_ENV: production
           VITE_BASE_PATH: /${{ github.event.repository.name }}/
+
+      # ✨ [추가된 핵심 로직] ✨
+      # SPA 라우팅 문제 해결을 위해 index.html을 복사해서 404.html을 만듭니다.
+      # 이렇게 하면 어떤 경로로 들어와도 리액트 앱이 실행됩니다.
+      - name: Create 404.html for GitHub Pages routing
+        run: cp dist/index.html dist/404.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
